--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -15,3 +15,7 @@ ja:
         language: 使用言語
         point: アピールポイント
         period: 開発期間
+      contact:
+        name: ユーザー名
+        email: メールアドレス
+        message: 内容
