--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -14,7 +14,8 @@ ja:
         function: 主な実装機能
         language: 使用言語
         point: アピールポイント
-        period: 開発期間
+        url: サービスのリンク
+        period: 作成期間
       contact:
         name: ユーザー名
         email: メールアドレス
