--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -9,7 +9,11 @@ ja:
         current_password: 現在のパスワード
         current_sign_in_at: 現在のログイン時刻
         current_sign_in_ip: 現在のログインIPアドレス
-        email: Eメール
+        name: ユーザー名
+        email: メールアドレス
+        profile: 自己紹介
+        twitter_link: Twitterリンク
+        github_link: GitHubリンク
         encrypted_password: 暗号化パスワード
         failed_attempts: 失敗したログイン試行回数
         last_sign_in_at: 最終ログイン時刻
@@ -22,7 +26,7 @@ ja:
         reset_password_sent_at: パスワードリセット送信時刻
         reset_password_token: パスワードリセット用トークン
         sign_in_count: ログイン回数
-        unconfirmed_email: 未確認Eメール
+        unconfirmed_email: 未確認メールアドレス
         unlock_token: ロック解除用トークン
         updated_at: 更新日
     models:
