--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -14,6 +14,7 @@ ja:
         profile: 自己紹介
         twitter_link: Twitterリンク
         github_link: GitHubリンク
+        user_image: プロフィール画像
         encrypted_password: 暗号化パスワード
         failed_attempts: 失敗したログイン試行回数
         last_sign_in_at: 最終ログイン時刻
@@ -29,6 +30,13 @@ ja:
         unconfirmed_email: 未確認メールアドレス
         unlock_token: ロック解除用トークン
         updated_at: 更新日
+      post: 
+        name: サービス名
+        content: サービス概要
+        url: サービスのリンク
+        image: サムネイル画像
+        period: 作成期間
+        point: アピールポイント
     models:
       user: ユーザー
   devise:
